# skillbox-finalproject

./: CMakeLists.txt  README.md
google_tests/: CMakeLists.txt  test1.cpp
include/: converterjson.h  invertedindex.h
json/: answers.json  config.json
src/: CMakeLists.txt  converterjson.cpp  invertedindex.cpp  main.cpp
